# EyeOfThePython

./: LICENSE  Pytrace.py  Pytrace_EyeOfThePython.py  README.md  fib.py  pyproject.toml  setup.cfg  setup.py
src/EyeOfThePython/: EyeOfThePython.py  __all__.py
src/EyeOfThePython.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: fib.py
