[metadata]
name = Pytrace_EyeOfThePython
version = 0.0.1
author = Erik Frandofer
author_email = erik.frandofer.365@gmail.com
description = Python tracing application
;long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snowmanista/PyTrace
;project_urls =
;   Bug Tracker: "package issues URL"
;
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src